# src/main/java/com/celada/spring/hexagonal/inbound/rest/controller/GameController.java
@@ -1,9 +1,10 @@
 package com.celada.spring.hexagonal.inbound.rest.controller;
 
 import com.celada.openapi.api.GameApi;
-import com.celada.openapi.model.ApiGame;
+import com.celada.openapi.model.RestGame;
 import com.celada.spring.hexagonal.domain.model.Game;
 import com.celada.spring.hexagonal.domain.service.GameService;
+import com.celada.spring.hexagonal.inbound.rest.adapter.GameAdapter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -15,20 +16,23 @@ import java.util.List;
 public class GameController implements GameApi {
 
     private final GameService service;
+    private final GameAdapter adapter;
 
-    public GameController(GameService service) {
+    public GameController(GameService service, GameAdapter adapter) {
         this.service = service;
+        this.adapter = adapter;
     }
 
     @Override
-    public ResponseEntity<Void> createGame(ApiGame apiGame) {
+    public ResponseEntity<Void> createGame(RestGame game) {
         return null;
     }
 
     @Override
-    public ResponseEntity<List<ApiGame>> getGames() {
+    public ResponseEntity<List<RestGame>> getGames() {
         log.info("Get Game Controller");
         List<Game> games = service.getGames();
-        return null;
+        List<RestGame> response = adapter.map(games);
+        return ResponseEntity.ok(response);
     }
 }
